feat: Enhance PWA and app icons
Integrates PWA features with updated manifest and service worker. Adds app icons for improved user experience and offline caching. Updates error message for API connection issues.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Yousif AI Guide</title>
     <meta name="theme-color" content="#2563eb">
     <meta name="description" content="Yousif AI Guide - Professional English-Urdu dictionary for students.">
+    
+    <!-- PWA & Icons -->
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="logo-192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="logo-512.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
