feat: Add script tag to load React app
Includes the necessary `<script type="module" src="index.tsx"></script>` tag in `index.html` to ensure the React application is properly loaded and initialized.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 </head>
 <body class="dynamic-bg">
     <div id="root"></div>
+    
+    <!-- This script tag is essential to start your React application -->
+    <script type="module" src="index.tsx"></script>
+
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
